--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@storybook/testing-library": "^0.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.5.1"
+    "storybook": "^7.5.1",
+    "dedent": "^0.7.0"
   }
 }
