--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "design-system",
+  "name": "@creador/design-system",
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
@@ -11,7 +11,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "workspaces": [
+    "./packages/utils",
+    "./packages/icons"
+  ],
   "devDependencies": {
+    "@storybook/addon-a11y": "^7.5.2",
     "@storybook/addon-essentials": "^7.5.1",
     "@storybook/addon-interactions": "^7.5.1",
     "@storybook/addon-links": "^7.5.1",
@@ -20,10 +25,11 @@
     "@storybook/nextjs": "^7.5.1",
     "@storybook/react": "^7.5.1",
     "@storybook/testing-library": "^0.2.2",
-    "@storybook/addon-a11y": "^7.5.2",
     "dedent": "^0.7.0",
+    "lerna": "^7.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.5.1"
-  }
+  },
+  "dependencies": {}
 }
