--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@creador/utils",
+    "name": "@crd/utils",
     "version": "0.0.1",
     "description": "React utility package designed to simplify common tasks.",
     "keywords": [
