--- a/package.json
+++ b/package.json
@@ -1,35 +1,39 @@
 {
-  "name": "@creador/design-system",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "workspaces": [
-    "./packages/utils",
-    "./packages/icons"
-  ],
-  "devDependencies": {
-    "@storybook/addon-a11y": "^7.5.2",
-    "@storybook/addon-essentials": "^7.5.1",
-    "@storybook/addon-interactions": "^7.5.1",
-    "@storybook/addon-links": "^7.5.1",
-    "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/blocks": "^7.5.1",
-    "@storybook/nextjs": "^7.5.1",
-    "@storybook/react": "^7.5.1",
-    "@storybook/testing-library": "^0.2.2",
-    "dedent": "^0.7.0",
-    "lerna": "^7.4.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "storybook": "^7.5.1"
-  },
-  "dependencies": {}
+    "name": "@crd/design-system",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.ts",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build",
+        "build-css": "clear && lerna run build"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "workspaces": [
+        "./packages/utils",
+        "./packages/icons"
+    ],
+    "devDependencies": {
+        "@storybook/addon-a11y": "^7.5.2",
+        "@storybook/addon-essentials": "^7.5.1",
+        "@storybook/addon-interactions": "^7.5.1",
+        "@storybook/addon-links": "^7.5.1",
+        "@storybook/addon-onboarding": "^1.0.8",
+        "@storybook/blocks": "^7.5.1",
+        "@storybook/nextjs": "^7.5.1",
+        "@storybook/react": "^7.5.1",
+        "@storybook/testing-library": "^0.2.2",
+        "dedent": "^0.7.0",
+        "lerna": "^7.4.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "storybook": "^7.5.1",
+        "sass": "^1.54.0",
+        "tsup": "^7.2.0",
+        "esbuild-sass-plugin": "^2.16.0"
+    },
+    "dependencies": {}
 }
