--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build",
-        "build-css": "clear && lerna run build"
+        "build": "clear && NODE_ENV=production lerna run build"
     },
     "keywords": [],
     "author": "",
@@ -27,13 +27,13 @@
         "@storybook/react": "^7.5.1",
         "@storybook/testing-library": "^0.2.2",
         "dedent": "^0.7.0",
+        "esbuild-sass-plugin": "^2.16.0",
         "lerna": "^7.4.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "storybook": "^7.5.1",
         "sass": "^1.54.0",
+        "storybook": "^7.5.1",
         "tsup": "^7.2.0",
-        "esbuild-sass-plugin": "^2.16.0"
-    },
-    "dependencies": {}
+        "typescript": "^5.2.2"
+    }
 }
