--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "index.ts",
     "scripts": {
+        "format-files": "clear && npx prettier --write .",
         "test": "echo \"Error: no test specified\" && exit 1",
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build",
@@ -34,6 +35,7 @@
         "sass": "^1.54.0",
         "storybook": "^7.5.1",
         "tsup": "^7.2.0",
-        "typescript": "^5.2.2"
+        "typescript": "^5.2.2",
+        "prettier": "^2.8.8"
     }
 }
