🐛 fix(package): package json deploy command updated.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build",
         "build": "clear && NODE_ENV=production lerna run build",
-        "deploy": "npm run build && npm run build-storybook && gh-pages -d storybook-static -b docs -m \"🚀 Update docs with latest changes.\""
+        "deploy": "npm run build && npm run build-storybook && gh-pages -d storybook-static -b main -m \"🚀 Update docs with latest changes.\""
     },
     "keywords": [],
     "author": "",
