--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build",
         "build": "clear && NODE_ENV=production lerna run build",
-        "deploy": "npm run build && npm run build-storybook && gh-pages -d storybook-static -b main -m \"🚀 Update docs with latest changes.\""
+        "lint": "eslint --ext .ts,.tsx ./packages/",
+        "changeset": "changeset",
+        "version": "changeset version",
+        "release": "changeset publish",
+        "postinstall": "npm run build",
+        "deploy": "npm run build-storybook && gh-pages -d storybook-static -b main -m \"🚀 Update docs with latest changes.\""
     },
     "keywords": [],
     "author": "",
@@ -19,6 +24,7 @@
         "./packages/icons"
     ],
     "devDependencies": {
+        "@changesets/cli": "^2.26.2",
         "@storybook/addon-a11y": "^7.5.2",
         "@storybook/addon-essentials": "^7.5.1",
         "@storybook/addon-interactions": "^7.5.1",
@@ -28,16 +34,28 @@
         "@storybook/nextjs": "^7.5.1",
         "@storybook/react": "^7.5.1",
         "@storybook/testing-library": "^0.2.2",
+        "@typescript-eslint/eslint-plugin": "^6.9.1",
         "dedent": "^0.7.0",
         "esbuild-sass-plugin": "^2.16.0",
+        "eslint": "^8.53.0",
+        "eslint-config-standard-with-typescript": "^39.1.1",
+        "eslint-plugin-eslint-comments": "^3.2.0",
+        "eslint-plugin-import": "^2.29.0",
+        "eslint-plugin-jest": "^27.6.0",
+        "eslint-plugin-n": "^16.2.0",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-storybook": "^0.6.15",
+        "gh-pages": "^4.0.0",
+        "jest": "^29.7.0",
         "lerna": "^7.4.2",
+        "prettier": "^2.8.8",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "sass": "^1.54.0",
         "storybook": "^7.5.1",
         "tsup": "^7.2.0",
-        "typescript": "^5.2.2",
-        "prettier": "^2.8.8",
-        "gh-pages": "^4.0.0"
+        "typescript": "^5.2.2"
     }
 }
