--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@crd/design-system",
+    "name": "@crdev/design-system",
     "version": "1.0.0",
     "description": "",
     "main": "index.ts",
@@ -35,6 +35,7 @@
         "@storybook/react": "^7.5.1",
         "@storybook/testing-library": "^0.2.2",
         "@typescript-eslint/eslint-plugin": "^6.9.1",
+        "clean-package": "^2.2.0",
         "dedent": "^0.7.0",
         "esbuild-sass-plugin": "^2.16.0",
         "eslint": "^8.53.0",
