--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@crd/utils",
+    "name": "@crdev/utils",
     "version": "0.0.1",
     "description": "React utility package designed to simplify common tasks.",
     "keywords": [
@@ -45,6 +45,7 @@
         "type": "git",
         "url": "git+https://github.com/creador-dev/design-system.git"
     },
+    "clean-package": "../../postpack.config.json",
     "scripts": {
         "clean": "rm -rf dist && rm -rf lib",
         "build": "npx tsup",
