--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "lint": "eslint --ext .ts,.tsx ./packages/",
         "changeset": "changeset",
         "version": "changeset version",
-        "release": "changeset publish",
+        "release": "npm run build && changeset publish",
         "postinstall": "npm run build",
         "deploy": "npm run build-storybook && gh-pages -d storybook-static -b main -m \"🚀 Update docs with latest changes.\""
     },
